--- a/config-eureka-5001.yml
+++ b/config-eureka-5001.yml
@@ -8,10 +8,10 @@ port: 5001 #注册中心占用7001端口,冒号后面必须要有空格
 spring: 
 profiles: dev
 application:
-name: microservicecloud-config-eureka-client
+name: config-eureka-5001
 eureka: 
 instance: 
-hostname: eureka7001.com #冒号后面必须要有空格
+hostname: eureka5001.com #冒号后面必须要有空格
 client: 
 register-with-eureka: false #当前的eureka-server自己不注册进服务列表中
 fetch-registry: false #不通过eureka获取注册信息
@@ -23,7 +23,7 @@ port: 5001 #注册中心占用7001端口,冒号后面必须要有空格
 spring: 
 profiles: test
 application:
-name: microservicecloud-config-eureka-client
+name: config-eureka-5001
 eureka: 
 instance: 
 hostname: eureka5001.com #冒号后面必须要有空格
