--- a/config-eureka-5001.yml
+++ b/config-eureka-5001.yml
@@ -12,12 +12,12 @@ spring:
     name: config-eureka-5001
 eureka:
   instance:
-    hostname: eureka5001.com #冒号后面必须要有空格
+    hostname: eureka1 #冒号后面必须要有空格
   client:
     register-with-eureka: false #当前的eureka-server自己不注册进服务列表中
     fetch-registry: false #不通过eureka获取注册信息
     service-url:
-      defaultZone: http://eureka5001.com:5001/eureka/
+      defaultZone: http://eureka1:5001/eureka/
 ---
 server:
   port: 5001 #注册中心占用7001端口,冒号后面必须要有空格
@@ -27,9 +27,9 @@ application:
   name: config-eureka-5001
 eureka:
   instance:
-    hostname: eureka5001.com #冒号后面必须要有空格
+    hostname: eureka1 #冒号后面必须要有空格
   client:
     register-with-eureka: false #当前的eureka-server自己不注册进服务列表中
     fetch-registry: false #不通过eureka获取注册信息
     service-url:
-      defaultZone: http://eureka5001.com:5001/eureka/
+      defaultZone: http://eureka1:5001/eureka/
