--- a/operconfigprovider6001.yml
+++ b/operconfigprovider6001.yml
@@ -25,11 +25,11 @@ spring:
 mybatis:
   mapper-locations:
     - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
+
 eureka:
-  client: #客户端注册进eureka服务列表内
+  client: 
     service-url:
-      defaultZone: http://localhost:5001/eureka
-#      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+      defaultZone: http://eureka1:5001/eureka
   instance:
     instance-id: operconfigprovider6001
     prefer-ip-address: true     #访问路径可以显示IP地址
@@ -58,10 +58,9 @@ mybatis:
   mapper-locations:
     - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 eureka:
-  client: #客户端注册进eureka服务列表内
+  client: 
     service-url:
-      defaultZone: http://localhost:5001/eureka
-#      defaultZone: http://eureka7001.com:7001/eureka/,http://eureka7002.com:7002/eureka/,http://eureka7003.com:7003/eureka/
+      defaultZone: http://eureka1:5001/eureka
   instance:
     instance-id: operconfigprovider6001
     prefer-ip-address: true     #访问路径可以显示IP地址
